# CnC_AI

./: .gitignore  Dockerfile  MANIFEST.in  README.md  background_model.py  discriminator.py  extract_assets.sh  gameplay.py  metric.py  model.py  setup.py  structures.txt  terrain.txt  train_background_model.py  units.txt
.github/workflows/: test.yaml
DllWrapper/: CMakeLists.txt  WebSocket.c  WebSocket.h  constructibles.py  decoders.py  dll.md  game_state.md  run.py
DllWrapper/TIBERIANDAWN/: VectorInterface.cpp  VectorInterface.hpp  all_asset_names.txt  all_assets_with_shapes.txt  cnc_structs.py  data_utils.cpp  data_utils.hpp  dynamic_object_names.txt  main.cpp  run.py  static_tile_names.txt  template_utils.hpp  vectorization.py
cli/: CMakeLists.txt  cnc_structs.py  ctypes_helper.py  decoders.py  game_state.md  gameplay.py  input_requests.py  run.py
cli/TIBERIANDAWN/: GamePlay.cpp  GamePlay.hpp  VectorInterface.cpp  VectorInterface.h  main.cpp
cnc_ai/: agent.py  arg_utils.py  background_model.py  common.py  dataset.py  gameplay.py  model.py  nn.py
cnc_ai/TIBERIANDAWN/: agent.py  all_assets_with_shapes.txt  bridge.py  cnc_structs.py  costs.json  model.py  replay.py  run.py
null_callback/: CMakeLists.txt  null_callback.cpp
